# xv6-riscv-oxidized

./: .gitignore  Makefile  flake.nix  results.txt
kernel/: console.c  fs.h  main.c  pipe.c  proc.c  syscall.c  syscall.h  sysfile.c
krusty/: Cargo.toml  Makefile
krusty/src/: console.rs  kernelib.rs  lang_items.rs  lib.rs  ring.rs
mkfs/: mkfs.c
rusty/: Cargo.toml
rusty-xv6/: Cargo.toml  Makefile
rusty-xv6/src/: console.rs  lib.rs  main.rs  syscall.rs  ulib.rs  user_ring.rs
rusty/.cargo/: config
rusty/krusty/: Cargo.toml  Makefile
rusty/krusty/src/: console.rs  kernelib.rs  lib.rs  logger.rs  ring.rs
rusty/rusty-xv6/: Cargo.toml  Makefile
rusty/rusty-xv6/src/: console.rs  lib.rs  logger.rs  syscall.rs  user_ring.rs
rusty/shared/: Cargo.toml
rusty/shared/src/: lib.rs
