[package]
name = "krusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = { version = "0.9.8" }
shared = { path = "../shared" }
linked_list_allocator.workspace = true

[lib]
crate-type = ["staticlib"]

[profile.release]
# strip = true
# opt-level = "z"
lto = true
codegen-units = 1
# panic = "abort"
